CDR-690 folder fixes + cleanup
-simplified handling of version_at_time parameter
-introduced term 'head' for non-history ("active") folders
-fail cleanly when branched versions are provided
-explicitly handle ehrFoldersIdx in Repository
-more readable union queries
-fix: same sysPeriod values in all folders of a version
-fix: coordinate sysPeriod values between versions
-fix: sysPeriod: min. 1 microsecond between upper and lower